Fix immutable-list validation in Bigtable models and requests
## WHAT

Validate defensive ArrayList copies in the row and cell models, Change
Streams mutation and filter, and the internal read-modify-write request.
Add regression coverage for immutable inputs, validation errors, copying,
unmodifiable accessors, order, duplicates, and value equality. Document the
public models' list contracts.

## WHY

Querying a caller's list with contains(null) throws for valid List.of and
List.copyOf inputs. Checking the owned copy accepts these lists while
retaining the existing null validation errors and list semantics.